hphp/test/zend/bad/ext/standard/tests/strings/htmlentities12.php
<?php
	print ini_get('default_charset')."\n";
	var_dump(htmlentities("\xe4\xf6\xfc", ENT_QUOTES, ''));
?>